tests/errors/spawnNotSend.milo
// @error: cannot send 'p' of type '*u8' across threads

from "std/runtime" import {
    Promise
}

fn main(): i32 {
    var x: i32 = 42
    unsafe {
        let p = (x.addrOf()) as *u8
        let _t = Promise<i64>.blocking(move(): i64 => {
            print("ptr value: ", p as i64)
            return 0
        }
        )
    }
    return 0
}
